--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -6,15 +6,15 @@
 /**mobile P2**/
 /**propiedades del header**/
 @media (max-width:800px){
-    body{
+    body{ background-color: rgba(149, 149, 149, 0.56);
         font-size: 62.5%;
     }
     header{
-    background-color: rgb(209, 246, 193);
-    width: 100%;
-    height: 11.5rem;
-    margin-bottom: 1rem;
-    position: sticky;
+        /* background-color: rgb(209, 246, 193); */
+        width: 100%;
+        height: 11.5rem;
+        margin-bottom: 1rem;
+        position: sticky;
 }
 li{
     list-style: none;
@@ -42,6 +42,7 @@ li a:visited{
 .caja-barras{
     display: flex;
     justify-content: center;
+    /* background-color: rgb(161, 100, 56); */
 }
 .barras{
     height: 2rem;
@@ -54,19 +55,28 @@ li a:visited{
 }
 .caja-links{
     background-color:  rgb(161, 100, 56);
-    margin-top: 0.3rem;
 }
 ul{
     display: flex;
     justify-content: center;
 }
 li{
+    margin-top: 0.3rem;
     margin-right: 1rem;
+    margin-bottom: 0.3rem;
+    padding: 0.5rem;
+    background-color: rgb(128, 128, 128, 0.8);
+    border-radius: 10%;
+}
+li:hover{
+    background-color: transparent;
 }
 /**aca empiezan las propiedades del body**/
 aside{
     background-color: red;
+    margin-top: 1.5rem;
     margin-bottom: 1rem;
+    height: 10rem;
 }
 main{
     margin: 0 2rem 0.5rem 2rem;
@@ -76,7 +86,9 @@ main{
     width: 100%;
     height: 16rem;
     margin-bottom: 1.5rem;
-    border: red solid 1px;
+}
+.cardsP2:hover{
+    transform: scale(1.1);
 }
 .caja-imgCardsP2{
     width: 100%;
@@ -88,22 +100,29 @@ main{
 }
 .caja-textoCardsP2{
     position: relative;
-    bottom: 8rem;
+    bottom: 4rem;
     z-index: 10;
-    background-color: rgba(68, 68, 68, 0.8);
+    background-color: rgba(68, 68, 68, 0.6);
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .textoImg{
     color: white;
-}
-/*.caja-fotos-p2{
-    border: solid blue 2px;
-    height: 30rem;
-    margin: 0rem 3rem 2rem 3rem;
+    font-size: 2rem;
 }
 .a{
+    font-size: 1rem;
+}
+.aa{
+    height: 6rem;
     width: 100%;
-    height: 100%;
-}*/
+    word-wrap: break-word;
+    border: solid blue 2px;
+    margin-bottom: 1rem;
+    padding: 0 0.3rem;
+}
 footer{
         background-color: rgb(161, 100, 56);
         height: 10rem;
@@ -144,8 +163,8 @@ li a:visited{
     color: white;
 }
 /*li a:hover{
-    background-image: linear-gradient(to bottom, black, grey);*/
-}
+    background-image: linear-gradient(to bottom, black, grey);
+}*/
 .caja-iconos{
     display: flex;
     justify-content: center;
