--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -58,14 +58,14 @@ li a:visited{
 }
 ul{
     display: flex;
-    justify-content: center;
+    justify-content:center;
 }
 li{
     margin-top: 0.3rem;
     margin-right: 1rem;
     margin-bottom: 0.3rem;
     padding: 0.5rem;
-    background-color: rgb(128, 128, 128, 0.8);
+    background-color: rgb(149, 149, 149, 0.8);
     border-radius: 10%;
 }
 li:hover{
@@ -73,7 +73,7 @@ li:hover{
 }
 /**aca empiezan las propiedades del body**/
 aside{
-    background-color: red;
+    background-color: rgba(127, 211, 1, 0.737);
     margin-top: 1.5rem;
     margin-bottom: 1rem;
     height: 10rem;
@@ -82,7 +82,6 @@ main{
     margin: 0 2rem 0.5rem 2rem;
 }
 .cardsP2{
-    background-color: aquamarine;
     width: 100%;
     height: 16rem;
     margin-bottom: 1.5rem;
@@ -97,6 +96,7 @@ main{
 .imgCardsP2{
     width: 100%;
     height: 16rem;
+    border: solid black 1px;
 }
 .caja-textoCardsP2{
     position: relative;
@@ -113,14 +113,14 @@ main{
     font-size: 2rem;
 }
 .a{
-    font-size: 1rem;
+    font-size: 1.1rem;
 }
 .aa{
     height: 6rem;
     width: 100%;
     word-wrap: break-word;
     border: solid blue 2px;
-    margin-bottom: 1rem;
+    margin-bottom: 2.2rem;
     padding: 0 0.3rem;
 }
 footer{
