--- a/css/styleP3.css
+++ b/css/styleP3.css
@@ -6,15 +6,15 @@
 /**mobile P1**/
 /**propiedades del header**/
 @media (max-width:800px){
-    body{
+    body{ background-color: rgba(149, 149, 149, 0.56);
         font-size: 62.5%;
     }
     header{
-    background-color: rgb(209, 246, 193);
-    width: 100%;
-    height: 11.5rem;
-    margin-bottom: 0.5rem;
-    position: sticky;
+        background-color: rgb(209, 246, 193);
+        width: 100%;
+        height: 11.5rem;
+        margin-bottom: 1rem;
+        position: sticky;
 }
 li{
     list-style: none;
@@ -42,6 +42,7 @@ li a:visited{
 .caja-barras{
     display: flex;
     justify-content: center;
+    /* background-color: rgb(161, 100, 56); */
 }
 .barras{
     height: 2rem;
@@ -54,18 +55,25 @@ li a:visited{
 }
 .caja-links{
     background-color:  rgb(161, 100, 56);
-    margin-top: 0.3rem;
 }
 ul{
     display: flex;
-    justify-content: center;
+    justify-content:center;
 }
 li{
+    margin-top: 0.3rem;
     margin-right: 1rem;
+    margin-bottom: 0.3rem;
+    padding: 0.5rem;
+    background-color: rgb(149, 149, 149, 0.8);
+    border-radius: 10%;
+}
+li:hover{
+    background-color: transparent;
 }
 /**aca empiezan las propiedades del body**/
 aside{
-    background-color: red;
+    background-color: rgba(127, 211, 1, 0.737);
     margin-top: 1.5rem;
     margin-bottom: 1rem;
     height: 10rem;
@@ -77,7 +85,6 @@ main{
     width: 100%;
     height: 16rem;
     margin-bottom: 1.5rem;
-    border: solid black 1px;
 }
 .cardsP3:hover{
     transform: scale(1.1);
@@ -89,31 +96,41 @@ main{
 .imgCardsP3{
     width: 100%;
     height: 16rem;
-}
-.a{
-    font-size: 1rem;
-}
-.aa{
-    height: 6rem;
-    width: 100%;
-    word-wrap: break-word;
-    border: solid blue 2px;
-    margin-bottom: 1rem;
-    padding: 0 0.3rem;
+    border: solid black 1px;
 }
 .caja-textoCardsP3{
-    position:relative;
+    position: relative;
     bottom: 4rem;
     z-index: 10;
     background-color: rgba(68, 68, 68, 0.6);
     height: 4rem;
     display: flex;
     align-items: center;
-    justify-content: center; 
+    justify-content: center;
 }
 .textoImg{
     color: white;
     font-size: 2rem;
+}
+.a{
+    font-size: 1.1rem;
+}
+.aa{
+    height: auto;
+    width: 100%;
+    word-wrap: break-word;
+    margin-bottom: 2.2rem;
+    padding: 0 0.3rem;
+    border-bottom: solid black 2px;
+}
+.caja-botonP2y3{
+    width: 6rem;
+    height: 2rem;
+    margin: auto;
+}
+.botonP2y3{
+    width: 100%;
+    height: 100%;
 }
 footer{
         background-color: rgb(161, 100, 56);
