--- a/css/styleP5.css
+++ b/css/styleP5.css
@@ -3,8 +3,8 @@
     padding: 0%;
     margin: 0%;
 }
-/**responsive P4**/
-@media (max-width:800px){
+/**propiedades medida mobile P4**/
+@media (max-width:600px){
     body{
         font-size: 62.5%;
     }
@@ -38,10 +38,6 @@ li a:visited{
     display: flex;
     justify-content: center;
 }
-/*.lupa{
-    height: 2rem;
-    width: 2rem;
-}*/
 .caja-barras{
     display: flex;
     justify-content: center;
@@ -142,9 +138,10 @@ footer{
 }
 
 
-/**propiedades descktop p4**/
-@media (min-width:801px){
+/**propiedades medida media p4**/
+@media (min-width:880px) and (max-width:1200px) {
     body{
+        background-color: rgba(149, 149, 149, 0.56);
         font-size: 62.5%;
     }
     .grilla-general{
@@ -162,12 +159,16 @@ header{
     height: 11.5rem;
     margin-bottom: 1rem;
     position: sticky;
-     /*top: ;*/
+    /*top: ;*/
     display: grid;
     grid-area: header;
 }
 li{
     list-style: none;
+    margin-top: 0.3rem;
+    margin-right: 1rem;
+    margin-bottom: 0.3rem;
+    padding: 0.5rem;
 }
 a{
     text-decoration: none;
@@ -175,7 +176,12 @@ a{
 li a:visited{
     color: white;
 }
+li:hover{
+    background-color:  rgb(149, 149, 149, 0.8);
+    border-radius: 10%;
+}
 .caja-iconos{
+    width: 100%;
     display: flex;
     justify-content: center;
     background-color: rgb(161, 100, 56);
@@ -183,16 +189,12 @@ li a:visited{
 .icono{ 
     width: 4rem;
     height: 4rem;
-    margin-left: 1rem;
+    margin-left: 1.8rem;
 }
 .caja-logo{
     display: flex;
     justify-content: center;
 }
-/*.lupa{
-    height: 2rem;
-    width: 2rem;
-}*/
 .caja-barras{
     display: none;
 }
@@ -214,7 +216,7 @@ li{
     margin-right: 0.4rem;
     font-size: 1rem;
 }
-
+/*aca empiezan las propiedades del body*/
 
 footer{
     background-color: rgb(161, 100, 56);
