--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -3,7 +3,7 @@
     padding: 0%;
     margin: 0%;
 }
-/**mobile P2**/
+/**mobile**/
 /**propiedades del header**/
 @media (max-width:700px){
     
@@ -35,6 +35,18 @@ aside{
 }
 main{
     margin: 0 2rem 0.5rem 2rem;
+}
+.card1P1{
+    margin-top: 2rem;
+}
+.carousel-tamaño{
+    width: 80%;
+    height: 60%;
+    margin: 0 auto;
+}
+.img{
+    width: 20rem;
+    height: 16rem;
 }
 .cards{
     width: 100%;
