--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -20,6 +20,7 @@ body{
     display: flex;
     justify-content: center;
     background-color: rgb(161, 100, 56, 0.8);
+    z-index: 20;
 }
 .icono{ 
     width: 2rem;
@@ -33,6 +34,9 @@ aside{
     margin-bottom: 1rem;
     height: 10rem;
 }
+h1{
+    margin: 2rem 0;
+}
 main{
     margin: 0 2rem 0.5rem 2rem;
 }
@@ -44,9 +48,13 @@ main{
     height: 60%;
     margin: 0 auto;
 }
-.img{
+.img-carousel{
     width: 20rem;
     height: 16rem;
+}
+.img-productos{
+    width: 100%;
+    height: 100%;
 }
 .cards{
     width: 100%;
