--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -9,19 +9,18 @@
 @media (max-width:700px){
     
 body{ 
-    
-    background-color: rgba(149, 149, 149, 0.56);
+    /* background-color: rgba(149, 149, 149, 0.56); */
+    background-color: rgba(221, 220, 220, 0.863);
     font-size: 62.5%;
     font-family: 'Roboto Condensed';
-
     }
 .navbar-color{
     background-color: rgb(209, 246, 193);
     }
-    ul li a{
-        font-size: 1rem;
-        font-weight: bolder;
-    }
+ul li a{
+    font-size: 1rem;
+    font-weight: bolder;
+}
 .caja-iconos{
     position: sticky;
     top: 0rem;
@@ -36,12 +35,6 @@ body{
     margin-left: 1rem;
 }
 /********************aca empiezan las propiedades del body********************/
-aside{
-    background-color: rgba(127, 211, 1, 0.737);
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-    height: 10rem;
-}
 .caja-h1{
     border-bottom: dotted black 2px;
     margin: 2rem 0 2rem 0rem;
@@ -53,21 +46,25 @@ h1{
 main{
     margin: 0 2rem 0.5rem 2rem;
 }
-.productos{
-    margin: 0 0 1rem 3rem;
-}
 .carousel-tamaño{
-    width: 80%;
+    width: 100%;
     height: 60%;
     margin: 0 auto;
 }
 .img-carousel{
+    margin-top: 1rem;
     width: 20rem;
     height: 16rem;
+}
+.productos{
+    margin: 0 0 1rem 4.8rem;
 }
 .img-productos{
     width: 100%;
     height: 100%;
+}
+.productos-descktop{
+    display: none;
 }
 .cards{
     width: 100%;
@@ -111,18 +108,26 @@ main{
     padding: 0 0.3rem;
     border-bottom: solid black 2px;
 }
-.caja-botonP2y3{
+.caja-boton{
     width: 6rem;
     height: 2rem;
     margin: auto;
 }
-.botonP2y3{
+.boton{
     width: 100%;
     height: 100%;
 }
 footer{
-    background-color: rgb(161, 100, 56);
+    display: flex;
+    background-color: rgb(161, 100, 56, 0.8);
     height: 10rem;
+}
+.footer-izquierda{
+    width: 50%;
+    border-right: solid black 1px;
+}
+.footer-derecha{
+    width: 50%;
 }
 }
 
@@ -154,11 +159,6 @@ body{
 }
 
 /*aca empiezan las propiedades del body*/
-aside{
-    margin-top: 1.5rem;
-    height: 23rem;
-    background-color: red;
-}
 main{
     margin-top: 1.5rem;
     margin-left: 1.5rem;
