--- a/css/styleP5.css
+++ b/css/styleP5.css
@@ -121,13 +121,13 @@ h2{
     font-size: 1.5rem;
     text-align: center;
 }
-.caja-boton{
+.caja-botonP5{
     width: 6rem;
     height: 2rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
-.boton{
+.botonP5{
     width: 100%;
     height: 100%;
 }
