--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -57,7 +57,7 @@ main{
     height: 16rem;
 }
 .productos{
-    margin: 0 0 1rem 4.8rem;
+    margin: 0 auto;
 }
 .img-productos{
     width: 100%;
@@ -133,13 +133,12 @@ footer{
 
 
 
-
-/**propiedades medida media p2**/
-@media (min-width:701px) and (max-width:900px) {
-
-body{ 
-        background-color: rgba(149, 149, 149, 0.56);
+/**propiedades medida media**/
+@media (min-width:701px){
+    body{ 
+        background-color: white;
         font-size: 62.5%;
+        font-family: 'Roboto Condensed';
     }
 .navbar-color{
         background-color: rgb(209, 246, 193);
@@ -151,19 +150,95 @@ body{
     display: flex;
     justify-content: center;
     background-color: rgb(161, 100, 56, 0.8);
+    z-index: 20;
 }
 .icono{ 
     width: 4rem;
     height: 4rem;
     margin-left: 1.8rem;
 }
-
 /*aca empiezan las propiedades del body*/
+.caja-h1{
+    border-bottom: dotted black 2px;
+    margin: 2rem 0 2rem 0rem;
+    padding: 0 0.5rem 0 1rem;
+}
+h1{
+    font-size: 2.5rem;
+}
 main{
-    margin-top: 1.5rem;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-    
+    margin: 0 4rem 0.5rem 4rem;
+}
+.carousel-tamaño{
+    width: 100%;
+    height: 60%;
+    margin: 0 auto;
+}
+.img-carousel{
+    margin-top: 1rem;
+    width: 20rem;
+    height: 16rem;
+}
+    .grid-productos{
+    display: grid;
+    grid-template-areas: 
+    "producto1  producto2"
+    "producto3  producto4"
+    "producto5  producto6"
+    "producto7  producto8"
+    "producto9  producto10"
+    "producto11 producto12"
+    "producto13 producto14"
+    "producto15";
+    /* justify-content: space-between; */
+}
+.productos{
+    margin-bottom: 2rem;
+}
+.producto1{
+    grid-area: producto1;
+}
+.producto2{
+    grid-area: producto2;
+}
+.producto3{
+    grid-area: producto3;
+}
+.producto4{
+    grid-area: producto4;
+}
+.producto5{
+    grid-area: producto5;
+}
+.producto6{
+    grid-area: producto6;
+}
+.producto7{
+    grid-area: producto7;
+}
+.producto8{
+    grid-area: producto8;
+}
+.producto9{
+    grid-area: producto9;
+}
+.producto10{
+    grid-area: producto10;
+}
+.producto11{
+    grid-area: producto11;
+}
+.producto12{
+    grid-area: producto12;
+}
+.producto13{
+    grid-area: producto13;
+}
+.producto14{
+    grid-area: producto14;
+}
+.producto15{
+    grid-area: producto15;
 }
 .cards{
     height: 22rem;
@@ -208,21 +283,203 @@ main{
     padding: 0 0.3rem;
     border-bottom: solid black 2px;
 }
+.caja-boton{
+    width: 6rem;
+    height: 2rem;
+    margin: auto;
+}
+.boton{
+    width: 100%;
+    height: 100%;
+}
+footer{
+    display: flex;
+    background-color: rgb(161, 100, 56, 0.8);
+    height: 10rem;
+}
+.footer-izquierda{
+    width: 50%;
+    border-right: solid black 1px;
+}
+.footer-derecha{
+    width: 50%;
+}
+}
 
-.caja-botonP2y3{
+
+
+
+
+/**propiedades medida descktop**/
+@media (min-width:1000px){
+
+body{ 
+        background-color: white;
+        font-size: 62.5%;
+        font-family: 'Roboto Condensed';
+    }
+.navbar-color{
+        background-color: rgb(209, 246, 193);
+    }
+
+.caja-iconos{
+    position: sticky;
+    top: 0rem;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(161, 100, 56, 0.8);
+    z-index: 20;
+}
+.icono{ 
+    width: 4rem;
+    height: 4rem;
+    margin-left: 1.8rem;
+}
+
+/*aca empiezan las propiedades del body*/
+.caja-h1{
+    border-bottom: dotted black 2px;
+    margin: 2rem 0 2rem 0rem;
+    padding: 0 0.5rem 0 1rem;
+}
+h1{
+    font-size: 2.5rem;
+}
+main{
+    margin: 0 4rem 0.5rem 4rem;
+}
+.carousel-tamaño{
+    width: 100%;
+    height: 60%;
+    margin: 0 auto;
+}
+.img-carousel{
+    margin-top: 1rem;
+    width: 20rem;
+    height: 16rem;
+}
+.grid-productos{
+    display: grid;
+    grid-template-areas: 
+    "producto1 producto2 producto3"
+    "producto4 producto5 producto6"
+    "producto7 producto8 producto9"
+    "producto10 producto11 producto12"
+    "producto13 producto14 producto15";
+    justify-content: space-between;
+}
+.productos{
+    margin-bottom: 2rem;
+}
+.producto1{
+    grid-area: producto1;
+}
+.producto2{
+    grid-area: producto2;
+}
+.producto3{
+    grid-area: producto3;
+}
+.producto4{
+    grid-area: producto4;
+}
+.producto5{
+    grid-area: producto5;
+}
+.producto6{
+    grid-area: producto6;
+}
+.producto7{
+    grid-area: producto7;
+}
+.producto8{
+    grid-area: producto8;
+}
+.producto9{
+    grid-area: producto9;
+}
+.producto10{
+    grid-area: producto10;
+}
+.producto11{
+    grid-area: producto11;
+}
+.producto12{
+    grid-area: producto12;
+}
+.producto13{
+    grid-area: producto13;
+}
+.producto14{
+    grid-area: producto14;
+}
+.producto15{
+    grid-area: producto15;
+}
+.cards{
+    height: 22rem;
+    width: 85%;
+    margin-left: 3rem;
+    margin-bottom: 1rem;
+    border: black solid 1px;
+}
+.caja-imgCards{
+    width: 100%;
+    height: 100%;
+}
+.imgCards{
+    width: 100%;
+    height: 19.9rem;
+}
+.imgCards:hover{
+    display: none;
+} 
+.caja-textoCards{
+    position: relative;
+    bottom: 4.01rem;
+    z-index: 10;
+    background-color: rgba(68, 68, 68, 0.4);
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.textoImg{
+    color: rgb(255, 255, 255);
+    font-size: 3rem;
+}
+.a{
+    font-size: 1.4rem;
+}
+.aa{
+    height: auto;
+    width: 85%;
+    word-wrap: break-word;
+    margin-bottom: 2.2rem;
+    padding: 0 0.3rem;
+    border-bottom: solid black 2px;
+}
+.caja-boton{
     width: 6rem;
     height: 2rem;
     margin: auto;
     
 }
-.botonP2y3{
+.boton{
     width: 100%;
     height: 100%;
 }
 footer{
-    grid-area: footer;
-    margin-top: 2rem;
-    background-color: rgb(161, 100, 56);
+    display: flex;
+    background-color: rgb(161, 100, 56, 0.8);
+    height: 10rem;
+}
+.footer-izquierda{
+    width: 50%;
+    border-right: solid black 1px;
+}
+.footer-derecha{
+    width: 50%;
 }
 } 
 
