--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -43,6 +43,10 @@ ul li a{
 h1{
     font-size: 2.5rem;
 }
+h1::selection{
+    background-color: black;
+    color: white;
+}
 main{
     margin: 0 2rem 0.5rem 2rem;
 }
@@ -57,7 +61,7 @@ main{
     height: 16rem;
 }
 .productos{
-    margin: 0 auto;
+    margin-bottom: 1rem;
 }
 .img-productos{
     width: 100%;
@@ -65,6 +69,11 @@ main{
 }
 .productos-descktop{
     display: none;
+}
+.grid-productos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .cards{
     width: 100%;
@@ -108,6 +117,10 @@ main{
     padding: 0 0.3rem;
     border-bottom: solid black 2px;
 }
+p::selection{
+    background-color: black;
+    color: white;
+}
 .caja-boton{
     width: 6rem;
     height: 2rem;
@@ -133,17 +146,21 @@ footer{
 
 
 
-/**propiedades medida media**/
-@media (min-width:701px){
-    body{ 
-        background-color: white;
-        font-size: 62.5%;
-        font-family: 'Roboto Condensed';
-    }
+                /**propiedades medida media**/
+                    @media (min-width:701px){
+
+body{ 
+    background-color: rgba(221, 220, 220, 0.863);;
+    font-size: 62.5%;
+    font-family: 'Roboto Condensed';
+}
 .navbar-color{
         background-color: rgb(209, 246, 193);
     }
-
+ul li a{
+    font-size: 1rem;
+    font-weight: bolder;
+}
 .caja-iconos{
     position: sticky;
     top: 0rem;
@@ -165,6 +182,10 @@ footer{
 }
 h1{
     font-size: 2.5rem;
+}
+h1::selection{
+    background-color: black;
+    color: white;
 }
 main{
     margin: 0 4rem 0.5rem 4rem;
@@ -241,11 +262,12 @@ main{
     grid-area: producto15;
 }
 .cards{
-    height: 22rem;
-    width: 85%;
-    margin-left: 3rem;
-    margin-bottom: 1rem;
-    border: black solid 1px;
+    width: 100%;
+    height: 25rem;
+    margin-bottom: 1.5rem;
+}
+.cards:hover{
+    transform: scale(1.1);
 }
 .caja-imgCards{
     width: 100%;
@@ -253,35 +275,37 @@ main{
 }
 .imgCards{
     width: 100%;
-    height: 19.9rem;
+    height: 25rem;
+    border: solid black 1px;
 }
-.imgCards:hover{
-    display: none;
-} 
 .caja-textoCards{
     position: relative;
-    bottom: 4.01rem;
+    bottom: 4rem;
     z-index: 10;
-    background-color: rgba(68, 68, 68, 0.4);
+    background-color: rgba(68, 68, 68, 0.6);
     height: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .textoImg{
-    color: rgb(255, 255, 255);
-    font-size: 3rem;
+    color: white;
+    font-size: 2rem;
 }
 .a{
-    font-size: 1.4rem;
+    font-size: 1.1rem;
 }
 .aa{
     height: auto;
-    width: 85%;
+    width: 100%;
     word-wrap: break-word;
-    margin-bottom: 2.2rem;
+    margin-bottom: 2.6rem;
     padding: 0 0.3rem;
     border-bottom: solid black 2px;
+}
+p::selection{
+    background-color: black;
+    color: white;
 }
 .caja-boton{
     width: 6rem;
@@ -309,9 +333,8 @@ footer{
 
 
 
-
-/**propiedades medida descktop**/
-@media (min-width:1000px){
+                    /**propiedades medida descktop**/
+                    @media (min-width:1000px){
 
 body{ 
         background-color: white;
@@ -321,7 +344,10 @@ body{
 .navbar-color{
         background-color: rgb(209, 246, 193);
     }
-
+ul li a{
+    font-size: 1.2rem;
+    font-weight: bolder;
+}
 .caja-iconos{
     position: sticky;
     top: 0rem;
@@ -344,19 +370,24 @@ body{
 }
 h1{
     font-size: 2.5rem;
+    margin-left: 30%;
+}
+h1::selection{
+    background-color: black;
+    color: white;
 }
 main{
     margin: 0 4rem 0.5rem 4rem;
 }
 .carousel-tamaño{
     width: 100%;
-    height: 60%;
+    height: 35rem;
     margin: 0 auto;
 }
 .img-carousel{
     margin-top: 1rem;
     width: 20rem;
-    height: 16rem;
+    height: 35rem;
 }
 .grid-productos{
     display: grid;
@@ -417,11 +448,12 @@ main{
     grid-area: producto15;
 }
 .cards{
-    height: 22rem;
-    width: 85%;
-    margin-left: 3rem;
-    margin-bottom: 1rem;
-    border: black solid 1px;
+    width: 100%;
+    height: 25rem;
+    margin-bottom: 1.5rem;
+}
+.cards:hover{
+    transform: scale(1.1);
 }
 .caja-imgCards{
     width: 100%;
@@ -429,41 +461,42 @@ main{
 }
 .imgCards{
     width: 100%;
-    height: 19.9rem;
+    height: 25rem;
+    border: solid black 1px;
 }
-.imgCards:hover{
-    display: none;
-} 
 .caja-textoCards{
     position: relative;
-    bottom: 4.01rem;
+    bottom: 4rem;
     z-index: 10;
-    background-color: rgba(68, 68, 68, 0.4);
+    background-color: rgba(68, 68, 68, 0.6);
     height: 4rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .textoImg{
-    color: rgb(255, 255, 255);
-    font-size: 3rem;
+    color: white;
+    font-size: 2rem;
 }
 .a{
-    font-size: 1.4rem;
+    font-size: 1.1rem;
 }
 .aa{
     height: auto;
-    width: 85%;
+    width: 100%;
     word-wrap: break-word;
-    margin-bottom: 2.2rem;
+    margin-bottom: 2.6rem;
     padding: 0 0.3rem;
     border-bottom: solid black 2px;
+}
+p::selection{
+    background-color: black;
+    color: white;
 }
 .caja-boton{
     width: 6rem;
     height: 2rem;
     margin: auto;
-    
 }
 .boton{
     width: 100%;
@@ -481,6 +514,6 @@ footer{
 .footer-derecha{
     width: 50%;
 }
-} 
+}
 
 
