--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -178,10 +178,10 @@ ul li a{
 .caja-h1{
     border-bottom: dotted black 2px;
     margin: 2rem 0 2rem 0rem;
-    padding: 0 0.5rem 0 1rem;
 }
 h1{
     font-size: 2.5rem;
+    margin-left: 16%;
 }
 h1::selection{
     background-color: black;
@@ -377,7 +377,7 @@ h1::selection{
     color: white;
 }
 main{
-    margin: 0 4rem 0.5rem 4rem;
+    margin: 0 5rem 0.5rem 5rem;
 }
 .carousel-tamaño{
     width: 100%;
@@ -447,13 +447,77 @@ main{
 .producto15{
     grid-area: producto15;
 }
+.grid-plantas{
+    display: grid;
+    grid-template-areas: 
+    "card1  card2"
+    "card3  card4"
+    "card5  card6"
+    "card7  card8"
+    "card9  card10"
+    "card11 card12"
+    "card13 card14"
+    "card15 card16";
+}
+.card1{
+    grid-area: card1;
+}
+.card2{
+    grid-area: card2;
+}
+.card3{
+    grid-area: card3;
+}
+.card4{
+    grid-area: card4;
+}
+.card5{
+    grid-area: card5;
+}
+.card6{
+    grid-area: card6;
+}
+.card7{
+    grid-area: card7;
+}
+.card8{
+    grid-area: card8;
+}
+.card9{
+    grid-area: card9;
+}
+.card10{
+    grid-area: card10;
+}
+.card11{
+    grid-area: card11;
+}
+.card12{
+    grid-area: card12;
+}
+.card13{
+    grid-area: card13;
+}
+.card14{
+    grid-area: card14;
+}
+.card15{
+    grid-area: card15;
+}
+.card16{
+    grid-area: card16;
+}
+.contenedor-cards{
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
 .cards{
     width: 100%;
-    height: 25rem;
+    height: 20rem;
     margin-bottom: 1.5rem;
 }
 .cards:hover{
-    transform: scale(1.1);
+    transform: scale(1.03);
 }
 .caja-imgCards{
     width: 100%;
@@ -461,7 +525,7 @@ main{
 }
 .imgCards{
     width: 100%;
-    height: 25rem;
+    height: 20rem;
     border: solid black 1px;
 }
 .caja-textoCards{
