--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -170,7 +170,7 @@ h2{
 .formulario::placeholder{
     color: rgb(161, 100, 56);
     font-size: 1.5rem;
-    padding: 0 0 0 0.5rem;
+    padding-right: 0.5rem;
 }
 .caja-textarea{ 
     width: 80%;  
