--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -159,7 +159,7 @@ h2{
     border-top: none;
     border-right: none;
     border-color: rgb(209, 246, 193);
-    padding-top:1rem;
+    /* padding-top:1rem; */
     background-color: transparent;
 }
 .formulario:focus{
