--- a/css/styleP2.css
+++ b/css/styleP2.css
@@ -449,7 +449,7 @@ footer{
 
 
 
-                    /**propiedades medida descktop**/
+                    /**propiedades medida desktop**/
                     @media (min-width:1000px){
 
 body{ 
